# decaff-compiler-pratik0509

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: arraysum.dcf  bubble.dcf  maxmin.dcf  nextmax.dcf  sumn.dcf
src/: arg_list.cpp  assignment.cpp  binary_op.cpp  block.cpp  codegenerator.cpp  decaff  decaff.l  decaff.output  decaff.tab.h  decaff.y  decaff.ypp  executables.cpp  expression.cpp  field_decls.cpp  for.cpp  global_decl.cpp  identifier.cpp  identifier_list.cpp  if_else.cpp  lex.yy.c  literal.cpp  location.cpp  method_call.cpp  method_decls.cpp  param_list.cpp  program.cpp  relational_op.cpp  statement.cpp  unary_op.cpp  var_decl.cpp
src/headers/: arg_list.h  assignment.h  binary_op.h  block.h  codegenerator.h  executables.h  expression.h  field_decls.h  for.h  global_decl.h  identifier.h  identifier_list.h  if_else.h  literal.h  location.h  method_call.h  method_decls.h  node.h  param_list.h  program.h  relational_op.h  statement.h  unary_op.h  var_decl.h
src/parser/: parser.y
src/scanner/: .gitignore  Makefile  decaff  decaff.l  decaff.output  decaff.tab.c  decaff.tab.h  decaff.y  scanner.l
